change about retaq to center

--- a/index.html
+++ b/index.html
@@ -208,24 +208,24 @@
     <div class="container show" id="about" style="direction: rtl; background-color: white; border-bottom: #e37083;"
         data-aos="fade-up-left">
         <div class="row show">
-            <div class="col-md-6 show">
-                <div class="section text-right show">
-                    <h2 class="title show" style="font-family: 'Almarai', sans-serif;"><span>عن </span> الشركة </h2>
-                    <hr class="text-right show" width="14%" center
-                        style="background-color:  #e37083; margin-top: 1%; margin-right: 0px;">
-                    <hr class="text-right show " width="8%" center
-                        style="background-color:  #e37083;  margin-right: 0px;">
+            <div class="col show">
+                <div class="section text-center show">
+                    <h2 class="title show" style="font-family: 'Almarai', sans-serif;"><span>عن </span> رتق </h2>
+                    <hr width="10%" center style="background-color: #e37083; ">
+            <hr width="6%" center style="background-color:  #e37083; margin-top: 0%;">
 
                     <b class="show" style="font-family: 'Almarai', sans-serif;">مصنع الرداء الموحد </b>
                     <p class="show" style="font-family: 'Almarai', sans-serif;">عن الشرمة هي شركة رتق للتصميم والخرازة
                         لتصنيع جميع
                         الملابس المناسبة ك حاسبة رتق رتق رتق رتق رتق شركة </p>
-                    <button id="button-read" class="btn btn-primary show"
-                        style="background-image: linear-gradient(to right, #ed6ea0 0%, #ec8c69 100%); margin-left: 35%; margin-right: 25%; margin-top: 12%;">
+                    <button id="button-read" class="btn btn-primary text-center show"
+                        style="background-image: linear-gradient(to right, #ed6ea0 0%, #ec8c69 100%); ">
                         أقرا المزيد
                     </button>
                 </div>
             </div>
+
+            <!-- margin-left: 50%; margin-right: 43%; margin-top: 12%; -->
 
 
             <!-- <div id="store" class="row-12 hidee">
@@ -263,13 +263,13 @@
 
             </div> -->
 
-            <div class="col-6 show">
+            <!-- <div class="col-6 show"> -->
                 <!-- <div class="text-center"> -->
-                <div class="text-center show"
-                    style="margin-top: 20%; margin-right:10% ; font-family: 'Almarai', sans-serif;">
-                    <img src="https://rataq.ntqdy.com/assets/images/arabic-logo.png" alt="" width="80%" height="70%">
-                </div>
-            </div>
+                <!-- <div class="text-center show" -->
+                    <!-- style="margin-top: 20%; margin-right:10% ; font-family: 'Almarai', sans-serif;"> -->
+                    <!-- <img src="https://rataq.ntqdy.com/assets/images/arabic-logo.png" alt="" width="80%" height="70%"> -->
+                <!-- </div> -->
+            <!-- </div> -->
         </div>
     </div>
     <hr class="text-right " width="100%" center style="background-color:  #e37083;  margin-right: 0px;">
